data/derived/comb/progs/unify/prog5347.ml.out
Characters 83-84:
  bigAdd (mulByDigit o l1) a
                           ^
Error: This expression has type int * 'a
       but an expression was expected of type int list
